tags/2013-08-29_cppreference/Archive/07bf068c76386362c8b55807221c5612-a575f249a4b24cce8d4b1e9d5097a146/output
+ g++ -std=c++11 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In instantiation of ‘class ClassName<int>’:
main.cpp:17:18:   required from here
main.cpp:9:3: error: no type named ‘type’ in ‘struct std::enable_if<false, void>’
   some_method()
   ^
main.cpp: In function ‘int main()’:
main.cpp:16:21: warning: unused variable ‘d’ [-Wunused-variable]
   ClassName<double> d;
                     ^
main.cpp:17:18: warning: unused variable ‘i’ [-Wunused-variable]
   ClassName<int> i;
                  ^
+ echo 1
1
